--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -57,7 +57,7 @@
   <div class="form-group">
     <%= u.label :password, "Password:", class: "col-md-1 control-label" %>
       <div class="col-md-3">
-        <%= u.text_field :password, class: "form-control"%>
+        <%= u.password_field :password, class: "form-control"%>
       </div>
   </div>
   <div class="form-group">
