-Adding longest_streak to racers/index - Make tables sortable via sortable.js

--- a/app/views/pages/loop_beer.html
+++ b/app/views/pages/loop_beer.html
@@ -6,7 +6,7 @@
 </head>
 <body style="padding-top: 60px">
 <div class="container-fluid">
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-bordered sortable">
       <thead>
       <tr>
         <th>Racer</th>
