--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -34,8 +34,8 @@
     <div class="panel panel-default">
     <div class="panel-heading">Streak Info</div>
     <div class="panel-body">
-    <h3 style="color:#f6b417"><i class="fa fa-trophy fa-2x" style="color:#f6b417"></i>Current: <%= @current_streak.to_s %></h3>
-    <h3 style="color:red"><i class="fa fa-trophy fa-2x" style="color:red"></i>Longest: <%= @longest_streak_count.to_s %></h3>
+    <h3 style="color:#f6b417"><i class="fa fa-trophy fa-2x" style="color:#f6b417"></i>Current: <%= @racer.current_streak.to_s %></h3>
+    <h3 style="color:red"><i class="fa fa-trophy fa-2x" style="color:red"></i>Longest: <%= @racer.longest_streak.to_s %></h3>
       </div>
       </div>
 
