--- a/app/views/racers/index.html.erb
+++ b/app/views/racers/index.html.erb
@@ -16,7 +16,7 @@
       </tr>
       </thead>
       <tbody>
-      <% @racers.each do |racer| %>
+      <% @racers.order("race_count DESC").each do |racer| %>
       <tr>
       <td><%= link_to racer.first_name + " " + racer.last_name, racer_path(racer) %>
       <% if !current_user.nil? and !User.where(racer_id: Racer.find(racer).id).pluck(:strava_link).empty? %>
