Adding aggregate order info to shop (admin only)

--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -42,6 +42,9 @@
           <% if current_user and !@user_shop_blocked %>
           <%= link_to 'Select', new_order_path(:item => "The Divis", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
+          <% if current_user.admin? %>
+          <h4> Order Count: <%= Order.where(:item => "The Divis").count %> </h4>
+          <% end %>
         </div>
         <div class="col-md-3">
           <b>The Lombard Gate</b>
@@ -53,6 +56,9 @@
           <br><br>
           <% if current_user and !@user_shop_blocked %>
           <%= link_to 'Select', new_order_path(:item => "The Lombard Gate", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
+          <% end %>
+          <% if current_user.admin? %>
+          <h4> Order Count: <%= Order.where(:item => "The Lombard Gate").count %> </h4>
           <% end %>
         </div>
         <div class="col-md-3">
@@ -66,6 +72,9 @@
           <% if current_user and !@user_shop_blocked %>
           <%= link_to 'Select', new_order_path(:item => "The Filbert St. Hop", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
+          <% if current_user.admin? %>
+          <h4> Order Count: <%= Order.where(:item => "The Filbert St. Hop").count %> </h4>
+          <% end %>
         </div>
         <div class="col-md-3">
           <b>The Buchanan</b>
@@ -78,7 +87,17 @@
           <% if current_user and !@user_shop_blocked %>
           <%= link_to 'Select', new_order_path(:item => "The Buchanan", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
+          <% if current_user.admin? %>
+          <h4> Order Count: <%= Order.where(:item => "The Buchanan").count %> </h4>
+          <% end %>
         </div>
+      </div>
+      <div class="row">
+        <% if current_user.admin? %>
+        <h3> Orders: <%= @total_orders %> </h3>
+        <h3> Eligible Users: <%= @eligible_users %> </h3>
+        <h3> <%= @percent_valid %> % of eligible users have ordered. </h3>
+        <% end %>
       </div>
     </div>
     <br>
