--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,9 @@
-Hi <%= @user.first_name %> <%= @user.last_name %>,
+Hi <%= @user.first_name %>,
 
 Welcome to the Fog City Run! Click on the link below to activate your account:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
+
+Thanks,
+
+Fog City Run
