--- a/app/views/result_mailer/results_email.text.erb
+++ b/app/views/result_mailer/results_email.text.erb
@@ -4,9 +4,9 @@ Thanks for coming to the Fog City Run on <%= @race_date %>.
 
 You finished with a rank of <%= @race_rank %> in a time of <%= @race_time %>.
 
-Here are the full results from that event: <%= @race_url %>
+Full results from the event: <%= @race_url %>
 
-You can see your full racer profile here: <%= @racer_url %>
+Your racer profile: <%= @racer_url %>
 
 Thanks,
 
