--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -3,44 +3,219 @@
 <head>
   <title>Racers</title>
   <%= render "shared/navbar" %>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body style="padding-top: 60px">
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <div id='timer'>00:00:00</div>
+    </div>
+    <script>
+       var startTime = <%= @start_time %>;
+       var inProgress = <%= @race_in_progess %>;
+    </script>
+  </div>
+  <% if @has_start_items %>
+  <h2> Start List </h2>
   <table class="table table-hover table-bordered sortable">
     <thead>
     <tr>
-      <th>Rank</th>
       <th>Bib</th>
-      <th>Group</th>
-      <th>Racer</th>
-      <th>Time</th>
-      <% if current_user and current_user.admin? %>
-        <th>Actions</th>
-      <% end %>
+      <th>Name</th>
+      <th>Stop </th>
+      <th>Action</th>
     </tr>
     </thead>
     <tbody>
-    <% @race.results.order(:rank).each do |result| %>
+    <% @start_items.each do |item| %>
       <tr>
-        <td><%= result.rank %></td>
-        <td><%= result.bib %></td>
-        <td><%= result.group_name %></td>
-        <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
-        <td><%= result.time %></td>
-        <% if current_user and current_user.admin? %>
-        <td><%= link_to 'Edit', edit_result_path(result) %> |   <%= link_to 'Destroy',
-                result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s } %></td>
+        <td><%= item.bib %></td>
+        <td><%= Racer.find(item.racer_id).first_name %> <%= Racer.find(item.racer_id).last_name %></td>
+        <% if (current_user and current_user.racer_id == item.racer_id) or (current_user and current_user.admin?) %>
+          <% if @race_in_progess and !item.finished %>
+          <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
+          <% elsif @race_in_progess and item.finished %>
+          <td>
+          <%= link_to 'Finished', collect_time_path(item), method: :post, :class => "btn btn-danger disabled" %>
+          <%= link_to 'Continue', continue_time_path(item), method: :post, :class => "btn btn-default" %>
+          </td>
+          <% elsif !@race_in_progess and item.finished %>
+          <td><button class="btn btn-default">Finished</button></td>
+          <% else %>
+          <td><button class="btn btn-default">Not started</button></td>
+          <% end %>
+          <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default" %></li></td>
+        <% else %>
+        <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default disabled" %></td>
+        <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default disabled" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default disabled" %></li></td>
         <% end %>
       </tr>
     <% end %>
     </tbody>
   </table>
-  <% if current_user and current_user.admin? %>
+  <% if current_user %>
     <div class="row text-center">
-    <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
-    <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-danger" %>
+      <% if current_user.admin? %>
+      <%= link_to 'Register Racer', new_start_item_path(:race_id => @race.id), :class => "btn btn-default" %>
+      <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
+      <% elsif !@current_user_registered %>
+      <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
+      <% end %>
+      <% if current_user and current_user.admin? and !@race_in_progess %>
+      <%= link_to 'Start', start_race_path(), method: :put, :class => "btn btn-default" %>
+      <% else %>
+      <%= link_to 'Stop Race', stop_race_path(), method: :put, :class => "btn btn-default" %>
+      <% end %>
     </div>
+  <% end %>
+  <% end %>
+  <% if @has_results %>
+    <h2> Results </h2>
+    <table class="table table-hover table-bordered sortable">
+      <thead>
+      <tr>
+        <th>Rank</th>
+        <th>Bib</th>
+        <th>Group</th>
+        <th>Racer</th>
+        <th>Time</th>
+        <% if current_user and current_user.admin? %>
+          <th>Actions</th>
+        <% end %>
+      </tr>
+      </thead>
+      <tbody>
+      <% @race_results.each do |result| %>
+        <tr>
+          <td><%= result.rank %></td>
+          <td><%= result.bib %></td>
+          <td><%= result.group_name %></td>
+          <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
+          <td><%= result.time %></td>
+          <% if current_user and current_user.admin? %>
+          <td><%= link_to 'Edit', edit_result_path(result), :class => "btn btn-default" %> <%= link_to 'Destroy',
+                  result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s }, :class => "btn btn-default" %></td>
+          <% end %>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <% if current_user and current_user.admin? and !@race_in_progess %>
+      <div class="row text-center">
+      <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
+      <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-danger" %>
+      </div>
+    <% end %>
   <% end %>
 </div>
 </body>
+<!-- Including the Javascript directly in the view for right now. Do not know why the asset pipeline isn't working. -->
+<script>
+// https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date
+
+// global object
+T = {} ;
+T.timerDiv = document.getElementById('timer');
+
+function displayTimer() {
+// initilized all local variables:
+var hours='00', minutes='00',
+miliseconds=0, seconds='01',
+time = '',
+timeNow = new Date().getTime();
+
+T.difference = timeNow - T.timerStarted;
+
+// seconds
+if(T.difference > 1000) {
+seconds = Math.floor(T.difference / 1000);
+if (seconds > 60) {
+seconds = seconds % 60;
+}
+if(seconds < 10) {
+seconds = '0'+String(seconds);
+}
+}
+
+// minutes
+if(T.difference > 60000) {
+minutes = Math.floor(T.difference/60000);
+if (minutes > 60) {
+minutes = minutes % 60;
+}
+if(minutes < 10) {
+minutes = '0'+String(minutes);
+}
+}
+
+// hours
+if(T.difference > 3600000) {
+hours = Math.floor(T.difference/3600000);
+// if (hours > 24) {
+// 	hours = hours % 24;
+// }
+if(hours < 10) {
+hours = '0'+String(hours);
+}
+}
+
+time  =  hours   + ':'
+time += minutes + ':'
+time += seconds;
+
+T.timerDiv.innerHTML = time;
+}
+
+function startTimer() {
+// save start time
+T.timerStarted = startTime * 1000;
+
+if (T.difference > 0) {
+T.timerStarted = T.timerStarted - T.difference
+}
+// update timer periodically
+T.timerInterval = setInterval(function() {
+displayTimer()
+}, 10);
+
+// show / hide the relevant buttons:
+document.getElementById('go').style.display="none";
+document.getElementById('stop').style.display="inline";
+document.getElementById('clear').style.display="none";
+}
+
+function stopTimer() {
+clearInterval(T.timerInterval); // stop updating the timer
+
+document.getElementById('stop').style.display="none";
+document.getElementById('go').style.display="inline";
+document.getElementById('clear').style.display="inline";
+}
+
+function clearTimer() {
+clearInterval(T.timerInterval);
+T.timerDiv.innerHTML = "00:00:00:00";
+T.difference = 0;
+
+document.getElementById('stop').style.display="none";
+document.getElementById('go').style.display="inline";
+document.getElementById('clear').style.display="none";
+}
+
+// Run the timer if the race is in progress
+if (inProgress) {
+startTimer()
+}
+
+</script>
+<!-- Including styling here as well. Don't know why the asset pipeline isn't working -->
+<style>
+#timer { 
+    font-size: 60px;
+    background-color: white;
+    color: black;
+    padding: 10 px;
+}
+</style>
 </html>
