--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -6,70 +6,115 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body style="padding-top: 60px">
+  <div id='timer'>00:00:00:00</div>
+  <div id='labels'>
+    <span id='hh'>Hours</span>
+    <span id='mm'>Minutes</span>
+    <span id='ss'>Seconds</span>
+    <span id='ms'>Centiseconds</span>
+  </div>
+<div id='controls'>
+<button onclick='startTimer()' id='go'>Go</button>
+<button onclick='stopTimer()'  id='stop'>Stop</button>
+<button onclick='clearTimer()' id='clear'>Clear</button>
+</div>
 <div class="container-fluid">
-  <% if @has_results %>
-  <h2> Results </h2>
-  <table class="table table-hover table-bordered sortable">
-    <thead>
-    <tr>
-      <th>Rank</th>
-      <th>Bib</th>
-      <th>Group</th>
-      <th>Racer</th>
-      <th>Time</th>
-      <% if current_user and current_user.admin? %>
-        <th>Actions</th>
-      <% end %>
-    </tr>
-    </thead>
-    <tbody>
-    <% @race_results.each do |result| %>
-      <tr>
-        <td><%= result.rank %></td>
-        <td><%= result.bib %></td>
-        <td><%= result.group_name %></td>
-        <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
-        <td><%= result.time %></td>
-        <% if current_user and current_user.admin? %>
-        <td><%= link_to 'Edit', edit_result_path(result) %> |   <%= link_to 'Destroy',
-                result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-  <% if current_user and current_user.admin? %>
-    <div class="row text-center">
-    <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
-    <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-danger" %>
-    </div>
-  <% end %>
-  <% end %>
-  <% if @has_start_items %>
   <h2> Start List </h2>
   <table class="table table-hover table-bordered sortable">
     <thead>
     <tr>
-      <th>Racer ID</th>
-      <th>Start Time</th>
-      <th>Finish Time</th>
+      <th>Bib</th>
+      <th>Name</th>
+      <% if current_user and current_user.admin? %>
+      <th>Stop </th>
+      <th>Action</th>
+      <% end %>
     </tr>
     </thead>
     <tbody>
     <% @start_items.each do |item| %>
       <tr>
-        <td><%= Racer.find(item.racer_id).first_name  %></td>
-        <td><%= item.start_time %></td>
-        <td><%= item.end_time %></td>
+        <td><%= item.bib %></td>
+        <td><%= Racer.find(item.racer_id).first_name %> <%= Racer.find(item.racer_id).last_name %></td>
+        <% if current_user and current_user.admin? %>
+          <% if @race_in_progess and !item.finished %>
+          <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
+          <% elsif @race_in_progess and item.finished %>
+          <td>
+          <%= link_to 'Finished', collect_time_path(item), method: :post, :class => "btn btn-danger disabled" %>
+          <%= link_to 'Continue', continue_time_path(item), method: :post, :class => "btn btn-default" %>
+          </td>
+          <% else %>
+          <td><button class="btn btn-default">Not started</button></td>
+          <% end %>
+          <td>
+            <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Modify
+            <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><%= link_to 'Edit', edit_start_item_path(item) %></li>
+            <li><%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.' } %></li>
+            </ul>
+            </div>
+          </td>
+        <% end %>
       </tr>
     <% end %>
     </tbody>
   </table>
   <% if current_user %>
     <div class="row text-center">
-    <%= link_to 'Register', new_start_item_url(:race_id=>"TEst"), :class => "btn btn-success" %>
+      <% if !@current_user_registered %>
+      <%= link_to 'Register', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-success" %>
+      <% else %>
+      <%= link_to 'Already registered', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default disabled" %>
+      <% end %>
+      <% if !@race_in_progess %>
+      <%= link_to 'Start', start_race_path(), method: :put, :class => "btn btn-default" %>
+      <% else %>
+      <%= link_to 'Stop Race', stop_race_path(), method: :put, :class => "btn btn-default" %>
+      <% end %>
     </div>
   <% end %>
+  <% if @has_results %>
+    <h2> Results </h2>
+    <table class="table table-hover table-bordered sortable">
+      <thead>
+      <tr>
+        <th>Rank</th>
+        <th>Bib</th>
+        <th>Group</th>
+        <th>Racer</th>
+        <th>Time</th>
+        <% if current_user and current_user.admin? %>
+          <th>Actions</th>
+        <% end %>
+      </tr>
+      </thead>
+      <tbody>
+      <% @race_results.each do |result| %>
+        <tr>
+          <td><%= result.rank %></td>
+          <td><%= result.bib %></td>
+          <td><%= result.group_name %></td>
+          <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
+          <td><%= result.time %></td>
+          <% if current_user and current_user.admin? %>
+          <td><%= link_to 'Edit', edit_result_path(result) %> |   <%= link_to 'Destroy',
+                  result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <% if current_user and current_user.admin? %>
+      <div class="row text-center">
+      <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
+      <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-danger" %>
+      </div>
+    <% end %>
   <% end %>
 </div>
 </body>
