--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -8,33 +8,23 @@
 <body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3 col-md-offset-5">
-      <div id='timer'>00:00:00:00</div>
+    <div class="col-md-3">
+      <div id='timer'>00:00:00</div>
     </div>
     <script>
        var startTime = <%= @start_time %>;
        var inProgress = <%= @race_in_progess %>;
     </script>
   </div>
-  <div class="row">
-    <div class="col-md-3 col-md-offset-5">
-      <div id='controls'>
-        <button onclick='startTimer()' id='go' class="btn btn-default">Go</button>
-        <button onclick='stopTimer()'  id='stop' class="btn btn-default">Stop</button>
-        <button onclick='clearTimer()' id='clear' class="btn btn-default">Clear</button>
-      </div>
-    </div>
-  </div>
+  <% if @has_start_items %>
   <h2> Start List </h2>
   <table class="table table-hover table-bordered sortable">
     <thead>
     <tr>
       <th>Bib</th>
       <th>Name</th>
-      <% if current_user and current_user.admin? %>
       <th>Stop </th>
       <th>Action</th>
-      <% end %>
     </tr>
     </thead>
     <tbody>
@@ -42,7 +32,7 @@
       <tr>
         <td><%= item.bib %></td>
         <td><%= Racer.find(item.racer_id).first_name %> <%= Racer.find(item.racer_id).last_name %></td>
-        <% if current_user and current_user.admin? %>
+        <% if (current_user and current_user.racer_id == item.racer_id) or (current_user and current_user.admin?) %>
           <% if @race_in_progess and !item.finished %>
           <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
           <% elsif @race_in_progess and item.finished %>
@@ -50,21 +40,15 @@
           <%= link_to 'Finished', collect_time_path(item), method: :post, :class => "btn btn-danger disabled" %>
           <%= link_to 'Continue', continue_time_path(item), method: :post, :class => "btn btn-default" %>
           </td>
+          <% elsif !@race_in_progess and item.finished %>
+          <td><button class="btn btn-default">Finished</button></td>
           <% else %>
           <td><button class="btn btn-default">Not started</button></td>
           <% end %>
-          <td>
-            <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Modify
-            <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><%= link_to 'Edit', edit_start_item_path(item) %></li>
-            <li><%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.' } %></li>
-            </ul>
-            </div>
-          </td>
+          <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default" %></li></td>
+        <% else %>
+        <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default disabled" %></td>
+        <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default disabled" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default disabled" %></li></td>
         <% end %>
       </tr>
     <% end %>
@@ -72,17 +56,19 @@
   </table>
   <% if current_user %>
     <div class="row text-center">
-      <% if !@current_user_registered %>
-      <%= link_to 'Register', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-success" %>
-      <% else %>
-      <%= link_to 'Already registered', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default disabled" %>
+      <% if current_user.admin? %>
+      <%= link_to 'Register Racer', new_start_item_path(:race_id => @race.id), :class => "btn btn-default" %>
+      <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
+      <% elsif !@current_user_registered %>
+      <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
       <% end %>
-      <% if !@race_in_progess %>
+      <% if current_user and current_user.admin? and !@race_in_progess %>
       <%= link_to 'Start', start_race_path(), method: :put, :class => "btn btn-default" %>
       <% else %>
       <%= link_to 'Stop Race', stop_race_path(), method: :put, :class => "btn btn-default" %>
       <% end %>
     </div>
+  <% end %>
   <% end %>
   <% if @has_results %>
     <h2> Results </h2>
@@ -108,14 +94,14 @@
           <td><%= link_to result.racer.first_name + ' ' + result.racer.last_name, racer_path(result.racer)%></td>
           <td><%= result.time %></td>
           <% if current_user and current_user.admin? %>
-          <td><%= link_to 'Edit', edit_result_path(result) %> |   <%= link_to 'Destroy',
-                  result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s } %></td>
+          <td><%= link_to 'Edit', edit_result_path(result), :class => "btn btn-default" %> <%= link_to 'Destroy',
+                  result_path(result), method: :delete, data: { confirm: 'Are you sure you want to delete the result for ' + result.racer.first_name.to_s + ' ' + result.racer.last_name.to_s }, :class => "btn btn-default" %></td>
           <% end %>
         </tr>
       <% end %>
       </tbody>
     </table>
-    <% if current_user and current_user.admin? %>
+    <% if current_user and current_user.admin? and !@race_in_progess %>
       <div class="row text-center">
       <%= link_to 'New Result', new_result_path(:race_id => @race.id), :class => "btn btn-success" %>
       <%= link_to 'Send Email', send_results_email_path(:race_id => @race), :class => "btn btn-danger" %>
@@ -124,6 +110,7 @@
   <% end %>
 </div>
 </body>
+<!-- Including the Javascript directly in the view for right now. Do not know why the asset pipeline isn't working. -->
 <script>
 // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date
 
@@ -137,12 +124,8 @@ var hours='00', minutes='00',
 miliseconds=0, seconds='01',
 time = '',
 timeNow = new Date().getTime();
-console.log("Start: " + T.timerStarted);
-console.log("Current: " + timeNow.toString());
 
 T.difference = timeNow - T.timerStarted;
-
-console.log("T: " + T.difference);
 
 // seconds
 if(T.difference > 1000) {
@@ -181,16 +164,12 @@ time  =  hours   + ':'
 time += minutes + ':'
 time += seconds;
 
-console.log("H: " + hours);
-console.log("M: " + minutes);
-console.log("S: " + seconds);
-
 T.timerDiv.innerHTML = time;
 }
 
 function startTimer() {
 // save start time
-T.timerStarted = startTime / 1000;
+T.timerStarted = startTime * 1000;
 
 if (T.difference > 0) {
 T.timerStarted = T.timerStarted - T.difference
@@ -230,13 +209,13 @@ startTimer()
 }
 
 </script>
+<!-- Including styling here as well. Don't know why the asset pipeline isn't working -->
 <style>
 #timer { 
-    width: 200px; 
-    font-size: 40px;
+    font-size: 60px;
     background-color: white;
     color: black;
-    padding: 5px;
+    padding: 10 px;
 }
 </style>
 </html>
