--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -31,13 +31,13 @@
             <%= i.text_field :bib, class: "form-control" %>
           </div>
       </div>
-      <div class="form-group hidden">
+      <div class="form-group">
         <%= i.label :racer_id, "Racer ID:", class: "col-md-1 control-label" %>
           <div class="col-md-3">
             <%= i.text_field :racer_id, class: "form-control", :value => params[:racer_id] %>
           </div>
       </div>
-      <div class="form-group hidden">
+      <div class="form-group">
         <%= i.label :race_id, "Race ID:", class: "col-md-1 control-label" %>
           <div class="col-md-3">
             <%= i.text_field :race_id, class: "form-control", :value => params[:race_id] %>
@@ -45,9 +45,16 @@
       </div>
       <div class="form-group">
         <div class="col-md-1 col-md-offset-1">
-        <%=button_tag "Submit", class: "btn btn-success"%>
+        <%=button_tag "Submit", class: "btn btn-default"%>
         </div>
       </div>
+  <% end %>
+  <% if current_user and current_user.admin? %>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
+      <%= link_to 'Add new racer', new_racer_path(), :class => "btn btn-default" %>
+    </div>
+  </div>
   <% end %>
 </body>
 </html>
