Only show Register in Races/index when user is logged in

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,6 +27,9 @@
     <p><a href="http://facebook.com/FogCityRun"><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;Go to our Facebook page. </a></P>
     </div>
     <div class="text-center">
+      <h4> <%= Racer.first.id %> </h4>
+    </div>
+    <div class="text-center">
       <i><%= link_to "Terms and Conditions", safety_path, :class => "terms_link" %></i>
     </div>
   </br>
