--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -20,7 +20,9 @@
       <th>Bib</th>
       <th>Name</th>
       <th>Stop </th>
+      <% if !@race_in_progess %>
       <th>Action</th>
+      <% end %>
     </tr>
     </thead>
     <tbody>
@@ -30,21 +32,25 @@
         <td><%= Racer.find(item.racer_id).first_name %> <%= Racer.find(item.racer_id).last_name %></td>
         <% if (current_user and current_user.racer_id == item.racer_id) or (current_user and current_user.admin?) %>
           <% if @race_in_progess and !item.finished %>
-          <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
+            <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default" %></td>
           <% elsif @race_in_progess and item.finished %>
-          <td>
-          <%= link_to 'Finished', collect_time_path(item), method: :post, :class => "btn btn-danger disabled" %>
-          <%= link_to 'Continue', continue_time_path(item), method: :post, :class => "btn btn-default" %>
-          </td>
+            <td>
+            <%= link_to 'Finished', collect_time_path(item), method: :post, :class => "btn btn-danger disabled" %>
+            <%= link_to 'Continue', continue_time_path(item), method: :post, :class => "btn btn-default" %>
+            </td>
           <% elsif !@race_in_progess and item.finished %>
-          <td><button class="btn btn-default">Finished</button></td>
+            <td><button class="btn btn-default">Finished</button></td>
           <% else %>
-          <td><button class="btn btn-default">Not started</button></td>
+            <td><button class="btn btn-default">Not started</button></td>
           <% end %>
-          <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default" %></li></td>
+          <% if !@race_in_progess %>
+            <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default" %></li></td>
+          <% end %>
         <% else %>
-        <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default disabled" %></td>
-        <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default disabled" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default disabled" %></li></td>
+          <td><%= link_to 'Stop', collect_time_path(item), method: :post, :class => "btn btn-default disabled" %></td>
+          <% if !@race_in_progess %>
+            <td><%= link_to 'Edit', edit_start_item_path(item), :class => "btn btn-default disabled" %> <%= link_to 'Destroy', start_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete this start entry.'}, :class => "btn btn-default disabled" %></li></td>
+          <% end %>
         <% end %>
       </tr>
     <% end %>
@@ -52,10 +58,10 @@
   </table>
   <% if current_user %>
     <div class="row text-center">
-      <% if current_user.admin? %>
+      <% if current_user.admin? and !@race_in_progess %>
       <%= link_to 'Register Racer', new_start_item_path(:race_id => @race.id), :class => "btn btn-default" %>
       <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
-      <% elsif !@current_user_registered %>
+      <% elsif !@current_user_registered and !@race_in_progess %>
       <%= link_to 'Register Yourself', new_start_item_path(:race_id => @race.id, :racer_id => current_user.racer_id), :class => "btn btn-default" %>
       <% end %>
       <% if current_user and current_user.admin? and !@race_in_progess %>
